[feat] #186 - api 탭 view - thymeleaf 코드 삭제 등
1. thymeleaf 코드 삭제
2. api 실행 js function 통합 - refactoring
3. refresh 관련 function 추가

--- a/src/main/resources/templates/user/admin.html
+++ b/src/main/resources/templates/user/admin.html
@@ -109,7 +109,7 @@
                             <span class="label-mini-title">최종 업데이트</span>
                             <span class="label-mini-title">작업</span>
                         </div>
-                        <div class="admin-grid">
+                        <div class="admin-grid" id="api-grid">
                             <div class="api">
                                 <div class="api-info">
                                     <div class="api-info-detail">
