[feat] #185 - api 탭 view - 최종 업데이트 표시 항목 추가
view 에서 `일시` 외에 `주요 테이블 필드 max()` 값을 표시하도록 했다.

--- a/src/main/resources/static/css/user/admin.css
+++ b/src/main/resources/static/css/user/admin.css
@@ -112,7 +112,7 @@
     margin: 0;
 }
 
-.api-time, .user-modified-at, .selenium-status, .redis-type {
+.user-modified-at, .api-time, .api-table-info, .selenium-status, .redis-type {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -120,7 +120,7 @@
     justify-items: center;
 }
 
-.api-time span, .user-modified-at, .selenium-status, .redis-type span {
+.user-modified-at, .api-time span, .selenium-status, .redis-type span {
     color: #666666;
     display: flex;
     justify-content: center;
