--- a/src/main/resources/templates/user/admin.html
+++ b/src/main/resources/templates/user/admin.html
@@ -7,10 +7,10 @@
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/common.css?v=2024030511" rel="stylesheet">
-    <link href="/css/header.css?v=2024030511" rel="stylesheet">
-    <link href="/css/footer.css?v=2024030511" rel="stylesheet">
-    <link href="/css/user/admin.css?v=2024030511" rel="stylesheet">
+    <link href="/css/common.css?v=2024033114" rel="stylesheet">
+    <link href="/css/header.css?v=2024033114" rel="stylesheet">
+    <link href="/css/footer.css?v=2024033114" rel="stylesheet">
+    <link href="/css/user/admin.css?v=2024033114" rel="stylesheet">
 </head>
 <body>
 <header id="header">
@@ -137,6 +137,11 @@
                                     <span class="label-text fas fa-clock">&nbsp;</span>
                                     <span class="label-mini-title">1900-01-01 00:00:00</span>
                                 </div>
+                                <div class="api-table-info">
+                                    <span class="label-text fas fa-database">&nbsp;</span>
+                                    <span class="label-mini-title">MAX(draw_no) = </span>
+                                    <span class="label-mini-title label-special">1113</span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -258,9 +263,9 @@
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/js/user/admin.js?v=2024030511"></script>
-<script type="text/javascript" src="/js/footer.js?v=2024030511"></script>
-<script type="text/javascript" src="/js/header.js?v=2024030511"></script>
+<script type="text/javascript" src="/js/user/admin.js?v=2024033114"></script>
+<script type="text/javascript" src="/js/footer.js?v=2024033114"></script>
+<script type="text/javascript" src="/js/header.js?v=2024033114"></script>
 <footer id="footer">
     <hr>
     footer 삽입부
