--- a/src/main/resources/templates/user/admin.html
+++ b/src/main/resources/templates/user/admin.html
@@ -7,16 +7,13 @@
     <meta name="author" charset="PARK GI-PYO">
     <title>project-lottery</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/css/common.css?v=2024033114" rel="stylesheet">
-    <link href="/css/header.css?v=2024033114" rel="stylesheet">
-    <link href="/css/footer.css?v=2024033114" rel="stylesheet">
-    <link href="/css/user/admin.css?v=2024033114" rel="stylesheet">
+    <link href="/css/common.css?v=2024040314" rel="stylesheet">
+    <link href="/css/header.css?v=2024040314" rel="stylesheet">
+    <link href="/css/footer.css?v=2024040314" rel="stylesheet">
+    <link href="/css/user/admin.css?v=2024040314" rel="stylesheet">
 </head>
 <body>
-<header id="header">
-    header 삽입부
-    <hr>
-</header>
+<header id="header"></header>
 <main class="container">
     <div class="content-group">
         <ul class="nav nav-pills" id="admin-tab" role="tablist">
@@ -50,13 +47,18 @@
                     <span class="label-mini-title">사용자 목록과 권한을 모니터링하고 관리합니다.</span>
                     <hr>
                     <div class="admin-wrapper">
-                        <span class="label-mini-title" id="user-count">&#128101 0명</span>
+                        <div class="header-status">
+                            <span class="label-mini-title" id="user-count">&#128101 0명</span>
+                            <btn class="btn btn-primary btn-refresh" id="btn-refresh-user-tab">
+                                <span class="fas fa-refresh label-mini-title label-white"></span>
+                            </btn>
+                        </div>
                         <div class="admin-grid-header">
                             <span class="label-mini-title">ID</span>
                             <span class="label-mini-title">최종 업데이트</span>
                             <span class="label-mini-title">작업</span>
                         </div>
-                        <div class="admin-grid">
+                        <div class="admin-grid" id="user-grid">
                             <div class="user">
                                 <div class="user-info">
                                     <div class="user-info-detail">
@@ -263,12 +265,9 @@
 <script src="https://kit.fontawesome.com/9f7c487e95.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<script type="text/javascript" src="/js/user/admin.js?v=2024033114"></script>
-<script type="text/javascript" src="/js/footer.js?v=2024033114"></script>
-<script type="text/javascript" src="/js/header.js?v=2024033114"></script>
-<footer id="footer">
-    <hr>
-    footer 삽입부
-</footer>
+<script type="text/javascript" src="/js/user/admin.js?v=2024040314"></script>
+<script type="text/javascript" src="/js/footer.js?v=2024040314"></script>
+<script type="text/javascript" src="/js/header.js?v=2024040314"></script>
+<footer id="footer"></footer>
 </body>
 </html>
